@@ -162,7 +162,7 @@ block|}
 block|}
 comment|/**    * Expert: Collects matching documents in a range. Hook for optimization.    * Note,<code>firstDocID</code> is added to ensure that {@link #nextDoc()}    * was called before this method.    *     * @param collector    *          The collector to which all matching documents are passed.    * @param max    *          Do not score documents past this.    * @param firstDocID    *          The first document ID (ensures {@link #nextDoc()} is called before    *          this method.    * @return true if more matching documents may remain.    */
 DECL|method|score
-specifier|protected
+specifier|public
 name|boolean
 name|score
 parameter_list|(
