@@ -274,7 +274,7 @@ comment|// firstDocID is ignored since nextDoc() sets 'doc'
 annotation|@
 name|Override
 DECL|method|score
-specifier|protected
+specifier|public
 name|boolean
 name|score
 parameter_list|(
